# WorldScript-Studio

./: .cursorrules  .deepsource.toml  .gitattributes  .gitignore  .lighthouserc.cjs  .lighthouserc.desktop.cjs  .npmrc  AGENTS.md  AUDIT.md  App.tsx  CHANGELOG.md  CHECKPOINT-2026-05-24.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  KIMI-INSTRUCT.md  README.md  ROADMAP.md  TODO.md  VENDOR-FORKS.md  WIEDERAUFNAHME.md  biome.json  docker-compose.yml  index.css  index.html  index.tsx  metadata.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  register-sw.ts  stryker.conf.json  suppressions-baseline.json  token-audit-baseline.json  tsconfig.json  tsconfig.tsgo.json  turbo.json  types.ts  vercel.json  (+4 more)
.codegraph/: CODEGRAPH_REPORT.md
.cursor/: index.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CI-AUDIT.md  CODEOWNERS  CONTRIBUTING.md  SECURITY.md  best-practices-badge.yml  copilot-instructions.md  dependabot.yml
.storybook/: main.js  main.ts  preview.tsx
app/: aiApi.ts  analyticsGate.ts  listenerMiddleware.ts  store.ts  storeRef.ts  transientUiStore.ts
backend/: README.md
community-templates/: index.json
components/: AdvancedImportExport.tsx  AnalyticsBootstrap.tsx  ApiKeySection.tsx  BinderPanel.tsx  BookPreviewView.tsx  CharacterGraphView.tsx  CharacterInterviewsView.tsx  CharacterView.tsx  CollaborationPanel.tsx  CommandPalette.tsx  CompileWizardModal.tsx  ConsistencyCheckerView.tsx  CriticView.tsx  CrossProjectSearchPanel.tsx  Dashboard.tsx  ExportView.tsx  Header.tsx  HelpView.tsx  ManuscriptResearchSplit.tsx  ManuscriptView.tsx  MindMapView.tsx  Sidebar.tsx  (+11 more)
src-tauri/: Cargo.toml  Entitlements.plist  osv-scanner.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_file_name_sanitization.rs
src-tauri/src/: lib.rs  lora.rs  pandoc.rs
src-tauri/src/commands/: mod.rs  task_supervisor.rs
(+1496 files in other folders)
