[package]
name = "storycraft-studio"
version = "1.20.0"
description = "AI-powered creative writing application"
authors = ["QNBS"]
license = "MIT"
repository = "https://github.com/QNBS/StoryCraft-Studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tokio = { version = "1", features = ["sync", "time", "process", "rt-multi-thread"] }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

[profile.release]
# QNBS-v3: Aggressive size + speed optimizations for desktop bundles
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[features]
default = []
rust-compute = ["candle-core", "candle-nn"]
